vertical scrollbar fix in refresh & autoHeight

--- a/src/scss/owl.core.scss
+++ b/src/scss/owl.core.scss
@@ -27,7 +27,8 @@
 		position: relative;
 		overflow: hidden;
 		/* fix for flashing background */
-		-webkit-transform: translate3d(0px, 0px, 0px);
+		-webkit-transform: translate3d(0,0,0) !important;
+        transform: translate3d(0,0,0) !important;
 	}
 
 	.owl-item {
